# soccer-rag

./: .gitignore  README.md  main.py  pyproject.toml
app/: chatbot.py  config.py  document_loader.py  embedder.py  ingestion.py  vectorstore.py
app/vectorstore/: __init__.py  bm25_manager.py  document_operations.py  hybrid_retriever.py  index_manager.py  query_manager.py  sync_manager.py  utils.py  vectorstore.py
